Adding style changes

--- a/Project1/src/main/webapp/index.html
+++ b/Project1/src/main/webapp/index.html
@@ -17,8 +17,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" style= "background-color: #28A745;">
-		<!--<a class="navbar-brand" href="">NotBad</a>-->
-		<img src="./images/LogoMakr_8ISMuc.png" alt="logo" class="navbar-brand" id="logo_image">
+		<a class="navbar-brand" href="">COMP</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarsExampleDefault"
 			aria-controls="navbarsExampleDefault" aria-expanded="false"
