--- a/Project1/src/main/webapp/index.html
+++ b/Project1/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" style= "background-color: #28A745;">
-		<h1 class="navbar-brand" href="">COMP</h1>
+		<h1 class="navbar-brand">myCASH</h1>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarsExampleDefault"
 			aria-controls="navbarsExampleDefault" aria-expanded="false"
